--- a/css/style_principal.css
+++ b/css/style_principal.css
@@ -9,3 +9,7 @@ td {border: 1px #DDD solid; padding: 5px; cursor: pointer;}
     float: right;
     margin: 5px;
 }
+#i_Modificar{
+    float: right;
+    margin: 5px;
+}
