--- a/css/reportes.css
+++ b/css/reportes.css
@@ -1,5 +1,5 @@
 .header {
-    border: 2px solid black;
+    border: 5px solid black;
     width: 100%;
     position: relative;
     margin-bottom: 20%;
@@ -13,6 +13,8 @@
   
   .logo {
     display: flex;
+    float: left;
+    
   }
   /*
   .logo img {
