Modulo para añadir piezas y reportes

--- a/css/style_trabajos.css
+++ b/css/style_trabajos.css
@@ -3,7 +3,7 @@
     border-bottom: black;
     border: 1px;
     width: 100%;
-    height: auto;
+    height: 80%;
     max-height: 512px;
     text-align: left;
 }
