--- a/css/style_principal.css
+++ b/css/style_principal.css
@@ -16,3 +16,13 @@ td {border: 1px #DDD solid; padding: 5px; cursor: pointer;}
 .derecha{
     float: right;
 }
+
+.Borde-Form{
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #000;
+}
+hr{
+    height: 15px;
+    background-color: #000;
+}
