--- a/css/style_trabajos.css
+++ b/css/style_trabajos.css
@@ -19,9 +19,36 @@
     display: inline;
     float: right;
     width: 75%;
-    
     position: relative;
 }
+
+#formulario_Rangos_tablas{/*Todo*/
+    display: inline-block;
+    border-bottom: black;
+    border: 1px;
+    width: 100%;
+    height: 80%;
+    max-height: 512px;
+    text-align: left;
+}
+#formulario_Rangos{/*izq*/
+    width: 50%;
+    float: left;
+    display: inline;
+    position: relative;
+}
+#tablas_rango_trabajo{/*dch*/
+    margin-top: 4%;
+    float: right;
+    width: 50%;
+    position: relative;
+}
+
+#formulario_rangos{
+    width: 90%;
+}
+
+
 h3{
     text-align: left;
 }
