--- a/css/style_principal.css
+++ b/css/style_principal.css
@@ -1,7 +1,8 @@
 td {border: 1px #DDD solid; padding: 5px; cursor: pointer;}
 
 .selected {
-    background-color: rgba(255, 0, 0, 0.651);
+    /*background-color: rgba(255, 0, 0, 0.651);*/
+    background-color: #257cfd;
     color: #FFF;
 }
 
@@ -25,4 +26,7 @@ td {border: 1px #DDD solid; padding: 5px; cursor: pointer;}
 hr{
     height: 15px;
     background-color: #000;
+}
+.derecha{
+    float: right;
 }
