--- a/css/style_principal.css
+++ b/css/style_principal.css
@@ -46,5 +46,6 @@ hr{
 .bg-logo-principal{
     /* Full height */
     height: 22%;
-    
+    border-radius: 8px;
+    box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 0.7);
 }
